# model-serving-stack

./: .coverage  .cursorrules  .env.template  .gitignore  CONTRIBUTING.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/agents/: add-api-logging.md  api-schema-polish.md  cleanup-duplicates.md  grafana-dashboard-polish.md  run-load-test.md
.github/workflows/: ci.yml
api/: main.py  models.py
autoscaling/: hpa.yaml
bentoml/: bentofile.yaml  build_and_push.sh  service.py
configs/: models.yaml  serving.yaml
deploy/: docker-compose.yml
docs/: architecture.md
evals/: benchmark.py  load_test.py
kubernetes/: dcgm-exporter.yaml  hpa-dcgm.yaml  ingress.yaml  triton-deployment.yaml  vllm-deployment.yaml
monitoring/: grafana_dashboard.json
monitoring/grafana/: gpu_serving_dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: serving_demo.ipynb
ray_serve/: autoscaling_config.yaml  deployment.py  multi_model_router.py
results/: baseline_bench_2026-06.json
tests/: test_api.py  test_api_middleware.py  test_benchmark.py  test_triton_client.py  test_vllm_client.py  test_vllm_openai.py
triton/: client.py  perf_analyzer.sh
triton/model_repo/llama3/: config.pbtxt
triton/model_repository/llama3/: config.pbtxt
triton/model_repository/llama3/1/: model.py
vllm/: batching_config.yaml  client.py  client_test.py  openai_server.py  server.py
