[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "model-serving-stack"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
exclude = ["triton/model_repository/**"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["gpu: marks tests that require a GPU"]

[tool.coverage.run]
omit = [
    "evals/benchmark.py",
    "vllm/server.py",
    "vllm/openai_server.py",
    "vllm/client_test.py",
]
